src/test/deca/context/invalid/created/decl_class/redefinition_retour_badsoustype.deca
// Description :
//    redéfinition type retour pas sous_type
// Resultats :
//		Erreur contextuelle
//    	Ligne 12 : ??

class A{
int meth(){ return 1;}
}

class B extends A{
boolean meth(){return true;}
}